update circle ci script

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,10 @@ workflows:
   heroku_deploy:
     jobs:
       - heroku/deploy-via-git:
-          filters:
-            branches:
-              only: master
+        parameters:
+          force:
+            type: boolean
+            default: true
+          branch:
+            type: string
+            default: master
